--- a/web/package.json
+++ b/web/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.28.0",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
+    "openai": "^6.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
